Prevent tiles from overflowing by downsizing, increase base size.

--- a/css/gameBoard.css
+++ b/css/gameBoard.css
@@ -1,9 +1,9 @@
 #topHand {
 	position: absolute;
 	top: 0;
-	left: 9.52vh;
+	left: 10.52vh;
 	max-height: 12vh;
-	width: calc(100vw - 19.04vh);
+	width: calc(100vw - 21.04vh);
 	text-align: center; /*Center tiles horizontally. */
 	background-color: #5a3e32;
 }
@@ -12,8 +12,8 @@
 	position: absolute;
 	left: 0;
 	top: 0;
-	max-width: 9.52vh;
-	width: 9.52vh;
+	max-width: 10.52vh;
+	width: 10.52vh;
 	height: 100vh;
 	background-color: #4c3329;
 }
@@ -22,8 +22,8 @@
 	position: absolute;
 	right: 0;
 	top: 0;
-	max-width:9.52vh;
-	width: 9.52vh;
+	max-width:10.52vh;
+	width: 10.52vh;
 	height: 100vh;
 	background-color: #4c3329;
 }
@@ -34,10 +34,10 @@ This means that something using bottom is off the page - hence we must use top. 
 	position: absolute;
 	/*bottom: 0;*/
 	top: 88vh;
-	left: 9.52vh;
+	left: 10.52vh;
 	height:12vh;
 	max-height: 12vh;
-	width: calc(100vw - 19.04vh);
+	width: calc(100vw - 21.04vh);
 	text-align: center; /*Center tiles horizontally. */
 	background-color: #7d4b37;
 }
@@ -71,7 +71,7 @@ This means that something using bottom is off the page - hence we must use top. 
 
 /*TODO: If tiles aren't at max size and height is much greater than width, the tiles run into each other, as the negative bottoms are height based, but tiles are width bound. */
 #gameBoard #topHand img {
-	max-width: calc(calc(100vw - 19.04vh) / 16); /*Raised from 14 in order to allow for more tiles to fit. */
+	max-width: calc(calc(100vw - 19.04vh) / 14); /*Raised from 14 in order to allow for more tiles to fit. */
 	margin-left: calc(calc(100vw - 19.04vh) / 17 / -10); /*Negative margin of 10%. Allows even more tiles to fit. */
 	max-height: 12vh;
 	/*transform: rotate(180deg);*/ /*Rotate tiles 180 degrees away from the viewer (they would be across from this person)*/
@@ -81,18 +81,19 @@ This means that something using bottom is off the page - hence we must use top. 
 #gameBoard #leftHand img {
 	transform: rotate(270deg);
 	max-width: 9.52vh;
-	max-height: 9vh;
+	max-height: 10.5vh;
 	padding-left: 2.38vh; /*Otherwise it is transformed partially off the screen. */
-	margin-bottom: -3.4vh; /*It seems like the elements height does not reflect the fact that it has been transformed. Negative margin to remove some of this. */
+	margin-bottom: -2vh; /*It seems like the elements height does not reflect the fact that it has been transformed. Negative margin to remove some of this. */
+	margin-top: -2vh; /*Split margin between top and bottom, as to prevent margin causing page to scroll downwards. */
 }
 
 #gameBoard #rightHand img {
 	transform: rotate(90deg);
 	max-width: 9.52vh;
-	max-height: 9vh;
-	padding-left: 2.38vh; /*Otherwise it is transformed partially off the screen. */
-	margin-top: -2.38vh; /*It seems like the elements height does not reflect the fact that it has been transformed. Negative margin to remove some of this. */
-	margin-bottom: -1.02vh;
+	max-height: 10.5vh;
+	margin-top: -2.75vh; /*It seems like the elements height does not reflect the fact that it has been transformed. Negative margin to remove some of this. */
+	margin-bottom: -1.25vh;
+	padding-left: 2.77vh; /*Stop from travling off hand to left. */
 }
 
 #gameBoard #userHand img, #gameBoard #userHandExposed img, #gameBoard #tilePlacemat img {
@@ -239,7 +240,7 @@ This means that something using bottom is off the page - hence we must use top. 
 /*Since we have to use top instead of bottom due to viewport bugs, this can be floating above where it should be. */
 #gameBoard #fullscreenControls {
 	position: absolute;
-	right: 9.52vh;
+	right: 10.52vh;
 	top: 71vh;
 	max-height: 5vh;
 	max-width: 5vw;
